feat: add bucket config and sms config
